# basic_rect_packer

./: Cargo.toml  README.md
examples/: visualise.rs
src/: lib.rs  main.rs  packer.rs
