[package]
name = "basic_rect_packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.23.0"
glam_rect = { version = "0.1.0", git = "https://github.com/kirinokirino/glam_rect.git" }  

[dev-dependencies]
speedy2d = { version = "2", git = "https://github.com/kirinokirino/speedy2d.git" } 
fastrand = "1.9.0"
